# cppsafe-tidy

./: .clang-tidy  CMakeLists.txt  README.md  add_new_check.py
src/: CppsafeTidyModule.cpp  UnusedReturnValueCheck.cpp  UnusedReturnValueCheck.h
tests/: check.py  run-tests.sh  unused-return-value-ignored.cpp  unused-return-value.cpp
